--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ ul {
   color: var(--primary-white-color);
 }
 
-.order__btn {
+.btn {
   background: var(--accent-color);
   width: 200px;
   height: 50px;
@@ -548,57 +548,8 @@ ul {
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-title {
-  display: block;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-  margin: 0 auto;
-  margin-bottom: 12px;
-}
-.form {
-  padding: 40px;
-}
-
-.form-field {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-
-.form-label {
-  font-size: 12px;
-  margin-bottom: 4px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-}
-.form-input {
-  height: 40px;
-  padding-left: 42px;
-  margin: 0;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form-icon {
-  position: absolute;
-  top: 31px;
-  left: 12px;
-  pointer-events: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--primary-black-color);
-}
-.form-field:focus .form-icon,
-.form-field:hover .form-icon {
-  color: var(--accent-color);
-  fill: currentColor;
-}
-/* Close button */
-.close-btn {
+/* -------Close button */
+.modal__closebtn{
   position: absolute;
   top: 8px;
   right: 8px;
@@ -613,36 +564,86 @@ ul {
   cursor: pointer;
   padding: 0;
 }
-.icon-close {
+/* Close button------- */
+.modal__closeicon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close:hover,
-.icon-close:focus {
+.modal__closeicon:hover,
+.modal__closeicon:focus {
   fill: currentColor;
   color: var(--accent-color);
 }
-.form-textarea {
+.modal__title {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin: 0 auto;
+  margin-bottom: 12px;
+}
+.form {
+  padding: 40px;
+}
+
+.form__field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form__label {
+  font-size: 12px;
+  margin-bottom: 4px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+.form__input {
+  height: 40px;
+  padding-left: 42px;
+  margin: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__icon {
+  position: absolute;
+  top: 31px;
+  left: 12px;
+  pointer-events: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--primary-black-color);
+}
+.form__field:hover .form__icon {
+  fill: currentColor;
+  color: var(--accent-color);
+  }
+
+.form__textarea {
   padding: 12px 16px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   resize: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-input:hover,
-.form-textarea:hover,
-.form-input:focus,
-.form-textarea:focus {
+.form__input:hover,
+.form__textarea:hover,
+.form__input:focus,
+.form__textarea:focus {
   border: 1px solid var(--accent-color);
 }
 
-.form-textarea::placeholder {
+.form__textarea::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 /* Соглашение */
-.form-checkbox-label {
+.checkbox__label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -651,7 +652,16 @@ ul {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-.icon-checkbox {
+
+.checkbox__label:focus .icon-checkbox,
+.checkbox__label:hover .icon-checkbox {
+  border: 2px solid var(--accent-color);
+}
+.checkbox {
+  appearance: none;
+  position: absolute;
+}
+.checkbox__icon {
   position: relative;
   width: 16px;
   height: 15px;
@@ -661,15 +671,8 @@ ul {
   background-size: contain;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-checkbox-label:focus .icon-checkbox,
-.form-checkbox-label:hover .icon-checkbox {
-  border: 2px solid var(--accent-color);
-}
-.checkbox {
-  appearance: none;
-  position: absolute;
-}
-.checkbox-link {
+
+.checkbox__link {
   margin-left: 5px;
   font-size: 14px;
   line-height: 1.71;
@@ -677,7 +680,7 @@ ul {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
-.checkbox:checked + .icon-checkbox {
+.checkbox:checked + .checkbox__icon {
   display: inline-block;
   border: 2px solid var(--accent-color);
   background-color: var(--accent-color);
@@ -696,13 +699,16 @@ ul {
 /* --------- Portfolio */
 /* -------Список кнопок------- */
 
-.navigation {
+.menu__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
+.menu__item:not(:last-child) {
+  margin-right: 10px;
+}
 
-.navigation-btn {
+.menu__btn {
   padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
@@ -718,36 +724,34 @@ ul {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-btn:focus,
-.navigation-btn:hover {
+.menu__btn:focus,
+.menu__btn:hover {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.navigation-space:not(:last-child) {
-  margin-right: 10px;
-}
+
 
 /* -------Карточки------ */
 
-.services {
+.services__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: calc(-1 * var(--section-services-gap));
   margin-top: calc(-1 * var(--section-services-gap));
 }
 
-.services-item {
+.services__item {
   flex-basis: calc(100% / 3 - var(--section-services-gap));
   margin-left: var(--section-services-gap);
   margin-top: var(--section-services-gap);
 }
-.services-link {
+.services__link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.services-link:hover,
-.services-link:focus {
+.services__link:hover,
+.services__link:focus {
   transform: translateY(0);
   display: block;
   box-sizing: border-box;
@@ -755,12 +759,12 @@ ul {
     1px 4px 6px rgb(0 0 0 / 16%);
 }
 
-.services-overlay {
+.services__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.services__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -779,22 +783,22 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.services-link:hover .overlay-text,
-.services-link:focus .overlay-text {
+.services__link:hover .services__overlay,
+.services__link:focus .services__overlay {
   transform: translateY(0);
 }
-.overlay-p {
+.services__overlay--text {
   text-align: left;
   padding-right: 24px;
   padding-left: 24px;
 }
 
-.services-content {
+.services__item-description {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
 
-.title-portfolio {
+.services__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -802,7 +806,7 @@ ul {
   color: var(--title-text-color);
 }
 
-.portfolio-services {
+.services__type {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
