--- a/css/style.css
+++ b/css/style.css
@@ -427,32 +427,6 @@ ul {
   display: flex;
   margin-top: 20px;
 }
-/* .soc__list {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-.soc__item:not(:last-child) {
-  margin-right: 10px;
-}
-.soc__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 22px;
-  height: 44px;
-  width: 44px;
-  background-color: var(--primary-white-color);
-  fill: var(--icon-background);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.soc__link:hover,
-.soc__link:focus {
-  fill: var(--primary-white-color);
-  background-color: var(--accent-color);
-} */
 .footer__social-item:not(:last-child) {
   margin-right: 10px;
 }
@@ -571,8 +545,7 @@ ul {
 }
 .modal__closeicon:hover,
 .modal__closeicon:focus {
-  fill: currentColor;
-  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 .modal__title {
   display: block;
@@ -620,8 +593,7 @@ ul {
   fill: var(--primary-black-color);
 }
 .form__input:focus + .form__icon {
-  color: var(--accent-color);
-  fill: currentColor;
+  fill: var(--accent-color);
 }
 
 .form__textarea {
