--- a/css/main.css
+++ b/css/main.css
@@ -453,12 +453,12 @@ ul {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscription__icon {
-  margin-left: 10px;
-}
-
 .subscription__input:focus {
   border: 1px solid #2196f3;
+}
+
+.subscription__icon {
+  margin-left: 10px;
 }
 
 .subscription__btn {
@@ -576,6 +576,10 @@ ul {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form__input:focus + .form__icon {
+  fill: #2196f3;
+}
+
 .form__icon {
   position: absolute;
   top: 31px;
@@ -583,10 +587,6 @@ ul {
   pointer-events: none;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #000000;
-}
-
-.form__input:focus + .form__icon {
-  fill: #2196f3;
 }
 
 .form__textarea {
@@ -694,7 +694,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu__btn:hover:focus, .menu__btn:hover:hover {
+.menu__btn:focus, .menu__btn:hover {
   background-color: #2196f3;
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -738,7 +738,7 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   justify-content: center;
