--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,14 @@ ul {
   padding-bottom: 94px;
 }
 
+.section--no-paddin-top {
+  padding-top: 0px;
+}
+
+.section--other-background {
+  background: #f5f4fa;
+}
+
 .section__title {
   color: #212121;
   font-weight: 700;
@@ -136,7 +144,7 @@ ul {
   background-color: #2196f3;
 }
 
-.contact__list {
+.contact {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -160,23 +168,22 @@ ul {
   color: #2196f3;
 }
 
-.icon__mail,
-.icon__smartphone {
+.contack__icon {
   fill: currentColor;
   margin-right: 10px;
 }
 
-.soc__list {
+.social {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.soc__item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.soc__link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -188,7 +195,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc__link:hover, .soc__link:focus {
+.social__link:hover, .social__link:focus {
   fill: #ffffff;
   background-color: #2196f3;
 }
@@ -235,17 +242,6 @@ ul {
   color: #ffffff;
 }
 
-.features__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
-  background-color: #f5f4fa;
-  width: 270px;
-  height: 120px;
-  margin-bottom: 30px;
-}
-
 .features {
   display: flex;
   margin-top: 30px;
@@ -257,6 +253,17 @@ ul {
 
 .features__item:not(:last-child) {
   margin-right: 30px;
+}
+
+.features__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
 }
 
 .features__title {
@@ -272,11 +279,7 @@ ul {
   margin-top: 10px;
 }
 
-.work__section {
-  padding-top: 0px;
-}
-
-.work__list {
+.work {
   display: flex;
 }
 
@@ -304,11 +307,7 @@ ul {
   text-transform: uppercase;
 }
 
-.section__team {
-  background: #f5f4fa;
-}
-
-.team__list {
+.team {
   display: flex;
 }
 
@@ -338,7 +337,7 @@ ul {
   margin-bottom: 10px;
 }
 
-.client__list {
+.client {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -669,7 +668,7 @@ ul {
 }
 
 /* -------Список кнопок------- */
-.menu__list {
+.menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -700,7 +699,7 @@ ul {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.services__list {
+.services {
   display: flex;
   flex-wrap: wrap;
   margin-left: calc(-1 * 30px);
@@ -722,11 +721,6 @@ ul {
   display: block;
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.services__link:hover .services__overlay,
-.services__link:focus .services__overlay {
-  transform: translateY(0);
 }
 
 .services__thumb {
@@ -759,7 +753,12 @@ ul {
   padding-left: 24px;
 }
 
-.services__item-description {
+.services__link:hover .services__overlay,
+.services__link:focus .services__overlay {
+  transform: translateY(0);
+}
+
+.services__box {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
@@ -772,7 +771,7 @@ ul {
   color: #212121;
 }
 
-.services__type {
+.services__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
