--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,12 +1,3 @@
-.features__icon {
-  @include centerflex();
-  border-radius: 4px;
-  background-color: $background-button-portfolio;
-  width: 270px;
-  height: 120px;
-  margin-bottom: 30px;
-}
-
 .features {
   display: flex;
   margin-top: $section-services-gap;
@@ -16,6 +7,14 @@
   &:not(:last-child) {
     margin-right: $section-services-gap;
   }
+}
+.features__box {
+  @include centerflex();
+  border-radius: 4px;
+  background-color: $background-button-portfolio;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
 }
 .features__title {
   color: $title-text-color;
